# raytracerchallenge

./: .gitignore  Cargo.toml  README.md
benches/: matrix.rs  ray_transform.rs  world_with_shadows.rs
src/: camera.rs  canvas.rs  color.rs  epsilon.rs  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  object.rs  pattern.rs  ppm.rs  ray.rs  shapes.rs  tuple.rs  world.rs
src/shapes/: mod.rs  plane.rs  shape.rs  sphere.rs
