[package]
name = "raytracerchallenge"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "world_with_shadows"
harness = false

[[bench]]
name = "ray_transform"
harness = false

[features]
shininess_as_float = []

