[package]
name = "raytracerchallenge"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {version = "~1.5.1", optional = true }
mutants = "0.0"

[dev-dependencies]
criterion = "~0.4"

[[bench]]
name = "world_with_shadows"
harness = false

[[bench]]
name = "ray_transform"
harness = false

[[bench]]
name = "matrix"
harness = false

[[bin]]
name = "par_world_camera"
required-features = ["rayon"]


[[bin]]
name = "par_patterns"
required-features = ["rayon"]

[[bin]]
name = "par_reflection"
required-features = ["rayon"]

[[bin]]
name = "par_refraction"
required-features = ["rayon"]

[features]
shininess_as_float = []
